<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calculator">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="130dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/answer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.644">

        <Button
            android:id="@+id/sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/min"
            android:textSize="25sp" />

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/sum"
            android:textSize="25sp"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/div"
            android:textSize="25sp" />

        <Button
            android:id="@+id/mul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/mul"
            android:textSize="25sp" />

        <Button
            android:id="@+id/equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/equal"
            android:textSize="35sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/answer"
        android:layout_width="139dp"
        android:layout_height="52dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:hint="result"
        android:textColor="#232D63"
        android:textColorHint="#E6E6E6"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.337"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_no"
        app:layout_constraintVertical_bias="0.344" />

    <EditText
        android:id="@+id/first_no"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="num1"
        android:inputType="number"
        android:textColorHint="#BCBCBC"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/second_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/second_no"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="num2"
        android:inputType="number"
        android:textColorHint="#BCBCBC"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toEndOf="@+id/first_no"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.149"
        tools:ignore="DuplicateSpeakableTextCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>


